--- a/skins/addSlider.skin-material.dark-static.css
+++ b/skins/addSlider.skin-material.dark-static.css
@@ -16,7 +16,7 @@
   display: block;
   width: 100%;
   height: 2px;
-  background-color: #999999;
+  background: #777777;
 }
 .addui-slider-handle {
   display: inline-block;
@@ -27,6 +27,7 @@
   border-radius: 99999px;
   z-index: 999;
   margin-left: -20px;
+  -webkit-transition: background 0.4s, box-shadow 0.4s;
   transition: background 0.4s, box-shadow 0.4s;
   cursor: pointer;
 }
@@ -52,10 +53,14 @@
   margin: 0 auto;
   text-align: center;
   font-size: 0;
+  -webkit-transition: font 0.8s;
   transition: font 0.8s;
   position: absolute;
-  top: -60%;
+  top: -50%;
   left: 50%;
+  color: #eeeeee;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
 }
 .addui-slider-active .addui-slider-value,
@@ -73,6 +78,7 @@
   max-width: 100%;
   position: absolute;
   box-shadow: 0 0 0 #3366ff;
+  -webkit-transition: box-shadow 0.4s;
   transition: box-shadow 0.4s;
 }
 .addui-slider-active .addui-slider-activeBar,
