--- a/skins/addSlider.skin-material.light-static.css
+++ b/skins/addSlider.skin-material.light-static.css
@@ -1,11 +1,3 @@
-<?php
-  header("X-Content-Type-Options: nosniff");
-  header("Content-Type: text/css");
-  include("../Convert.php");
-
-  $slider = "#007cff";
-  extract($_GET);
-?>
 *[class^=addui-slider] {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -23,35 +15,52 @@
 .addui-slider-bar {
   display: block;
   width: 100%;
-  height: 4px;
-  background-color: #b3b3b3;
-  border-radius: 4px;
+  height: 2px;
+  background: #aaaaaa;
 }
 .addui-slider-handle {
   display: inline-block;
-  height: 30px;
-  width: 30px;
+  height: 40px;
+  width: 40px;
   position: absolute;
-  top: -14px;
-  background-color: #ffffff;
-  border: 1px solid #d4d4d4;
+  top: -19px;
   border-radius: 99999px;
   z-index: 999;
   margin-left: -20px;
+  -webkit-transition: background 0.4s, box-shadow 0.4s;
   transition: background 0.4s, box-shadow 0.4s;
   cursor: pointer;
-  box-shadow: 0 2px 2px rgba(179,179,179,0.5);
+}
+.addui-slider-active .addui-slider-handle,
+.addui-slider-activeMin .addui-slider-handle-min,
+.addui-slider-activeMax .addui-slider-handle-max {
+  background-color: rgba(51,102,255,0.25);
+  box-shadow:
+    0 0 10px rgba(51,102,255,0.25);
+}
+.addui-slider-handle::before {
+  display: block;
+  content: " ";
+  width: 20px;
+  height: 20px;
+  background-color: #3366ff;
+  margin: 10px;
+  border-radius: 999999px;
 }
 .addui-slider-value {
   display: inline-block;
-  height: 30px;
+  height: 40px;
   margin: 0 auto;
   text-align: center;
   font-size: 0;
+  -webkit-transition: font 0.8s;
   transition: font 0.8s;
   position: absolute;
-  top: -75%;
+  top: -50%;
   left: 50%;
+  color: #111111;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
 }
 .addui-slider-active .addui-slider-value,
@@ -64,9 +73,16 @@
 .addui-slider-activeBar {
   display: block;
   width: 0;
-  height: 4px;
-  background-color: <?php echo $slider; ?>;
+  height: 2px;
+  background-color: #3366ff;
   max-width: 100%;
   position: absolute;
-  border-radius: 4px;
+  box-shadow: 0 0 0 #3366ff;
+  -webkit-transition: box-shadow 0.4s;
+  transition: box-shadow 0.4s;
+}
+.addui-slider-active .addui-slider-activeBar,
+.addui-slider-activeMin .addui-slider-activeBar,
+.addui-slider-activeMax .addui-slider-activeBar {
+  box-shadow: 0 0 2px #3366ff;
 }
