--- a/skins/addSlider.skin-simple.light-static.css
+++ b/skins/addSlider.skin-simple.light-static.css
@@ -16,7 +16,7 @@
   display: block;
   width: 100%;
   height: 2px;
-  background-color: #999999;
+  background-color: #aaaaaa;
 }
 .addui-slider-handle {
   display: inline-block;
@@ -24,9 +24,10 @@
   width: 40px;
   position: absolute;
   top: -19px;
-  border-radius: 99999px;
+  border-radius: 999999px;
   z-index: 999;
   margin-left: -20px;
+  -webkit-transition: background 0.4s, box-shadow 0.4s;
   transition: background 0.4s, box-shadow 0.4s;
   cursor: pointer;
 }
@@ -48,15 +49,23 @@
 }
 .addui-slider-value {
   display: inline-block;
-  height: 40px;
+  background: #3366ff;
+  color: #eeeeee;
+  border-radius: 999999px;
+  height: auto;
   margin: 0 auto;
+  padding: 0;
   text-align: center;
   font-size: 0;
-  transition: font 0.8s;
+  -webkit-transition: font 0.8s, padding 0.8s;
+  transition: font 0.8s, padding 0.8s;
   position: absolute;
-  top: -60%;
+  top: -100%;
   left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
+  z-index: 9;
 }
 .addui-slider-active .addui-slider-value,
 .addui-slider-activeMin .addui-slider-handle-min .addui-slider-value,
@@ -64,6 +73,42 @@
 .addui-slider-activeMax .addui-slider-handle-min .addui-slider-value,
 .addui-slider-activeMax .addui-slider-handle-max .addui-slider-value {
   font-size: 18px;
+  padding: 8px;
+}
+.addui-slider-value:after,
+.addui-slider-handle-min .addui-slider-valueafter,
+.addui-slider-handle-max .addui-slider-value:after,
+.addui-slider-handle-min .addui-slider-value:after,
+.addui-slider-handle-max .addui-slider-value:after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: calc(50% - 0px);
+  top: 0;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  margin: 0 auto;
+  height: 0px;
+  width: 0px;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  background: #3366ff;
+  z-index: -1;
+  pointer-events: none;
+  -webkit-transition: opacity 0.8s, top 0.8s, left 0.8s, height 0.8s, width 0.8s;
+  transition: opacity 0.8s, top 0.8s, left 0.8s, height 0.8s, width 0.8s;
+}
+.addui-slider-active .addui-slider-value:after,
+.addui-slider-activeMin .addui-slider-handle-min .addui-slider-value:after,
+.addui-slider-activeMin .addui-slider-handle-max .addui-slider-value:after,
+.addui-slider-activeMax .addui-slider-handle-min .addui-slider-value:after,
+.addui-slider-activeMax .addui-slider-handle-max .addui-slider-value:after {
+  top: 30px;
+  height: 10px;
+  width: 10px;
+  left: calc(50% - 5px);
 }
 .addui-slider-activeBar {
   display: block;
@@ -73,6 +118,7 @@
   max-width: 100%;
   position: absolute;
   box-shadow: 0 0 0 #3366ff;
+  -webkit-transition: box-shadow 0.4s;
   transition: box-shadow 0.4s;
 }
 .addui-slider-active .addui-slider-activeBar,
